<resources>
    <string name="app_name">Takien Floating Market</string>
    <string name="signup_thai">ลงทะเบียน</string>
    <string name="signin_thai">เข้าสู่ระบบ</string>
    <string name="register_thai">สมัครสมาชิก</string>
    <string name="forgetpass_thai"> ลืมรหัสผ่าน</string>
    <string name="ok_thai">ตกลง</string>
    <string name="cancel_thai">ยกเลิก</string>
    <string name="takienfloatingmarket_thai">ตลาดน้ำวัดตะเคียน</string>
    <string name="map_thai">แผนที่มายังวัดตะเคียน</string>
    <string name="member_thai">สมาชิกทั่วไป</string>
    <string name="admin_thai">แอดมิน</string>


    <string name="user_thai">ชื่อผู้ใช้งาน :</string>
    <string name="password_thai">รหัสผ่าน :</string>
    <string name="repassword_thai">ยืนยันรหัสผ่าน :</string>
    <string name="name_thai">ชื่อ :</string>
    <string name="surname_thai">นามสกุล :</string>
    <string name="id_thai">เลขประจำตัวประชาชน :</string>
    <string name="birthday_thai">วัน/เดือน/ปีเกิด :</string>
    <string name="address_thai">ที่อยู่ :</string>
    <string name="tel_thai">เบอร์โทรศัพท์ :</string>
    <string name="email_thai">อีเมลล์ :</string>
    <string name="namestore_thai">ชื่อร้านค้า :</string>
    <string name="description_thai">รายละเอียดร้านค้า :</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>


    <string name="prefix1">นางสาว</string>
    <string name="prefix2">นาง</string>
    <string name="prefix3">นาย</string>

    <string name="district">ตำบล</string>
    <string name="amphur">อำเภอ</string>
    <string name="province">จังหวัด</string>

</resources>
