<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="suwuttipoj.nantapak.takienfloatingmarket.SignUpActivity"
    android:background="@drawable/backgroundregis">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:onClick="clickSaveData"
        android:background="@drawable/registerthai01" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="#82baa00e"

        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_above="@+id/button3"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:background="#82baa00e">

            <TextView
                android:text="User for Login :"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="@dimen/h2"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/user_thai"
                    android:id="@+id/textView2"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:layout_width="0dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/password_thai"
                    android:id="@+id/textView3"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|text"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textSize="20sp"
                    android:text="@string/repassword_thai"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|text"
                    android:ems="10"
                    android:id="@+id/editText3"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

            </LinearLayout>

            <TextView
                android:text="Detail :"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:textSize="@dimen/h2"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ragPrefix"
                android:orientation="horizontal">

                <RadioButton
                    android:text="@string/prefix1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton6"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/prefix2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/prefix3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton5"
                    android:layout_weight="1" />
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/name_thai"
                    android:id="@+id/textView5"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:layout_width="0dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/surname_thai"
                    android:id="@+id/textView20"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:id="@+id/editText14"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:layout_width="0dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_thai"
                    android:id="@+id/textView8"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText7"
                    android:layout_weight="2"
                    android:lines="3"
                    android:gravity="top"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/district"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView21"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/amphur"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView22"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner1"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/province"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView23"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner2"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_thai"
                    android:id="@+id/textView9"
                    android:textSize="20sp"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText8"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="0812345678" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_thai"
                    android:id="@+id/textView10"
                    android:textSize="20sp"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText9"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>